# habackend

./: .env  .gitignore  Cargo.toml  README.md  init.sql  superpwd  users
migrations/2019-11-25-061001_create_users/: up.sql
migrations/2019-11-26-184502_locations/: up.sql
migrations/2019-11-26-184515_conditions/: down.sql  up.sql
src/: auth.rs  config.rs  lib.rs  main.rs  schema.rs
src/db/: conditions.rs  mod.rs  users.rs
src/models/: conditions.rs  mod.rs  user.rs  utils.rs
src/routes/: conditions.rs  mod.rs  users.rs
test/: habackend.postman_collection.json  habackend.postman_environment.json  habackend.postman_integration_test_environment.json
