[package]
name = "habackend"
version = "0.1.0"
authors = ["ybergeek <alf.jansson66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2" }
rocket_cors = { version = "0.4.0", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#rust-crypto = "0.2.36"
scrypt = "0.2.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
frank_jwt = "3.1.2"
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.5"
bigdecimal = { version = "0.1.0", features = ["serde"] }
diesel = {version = "1.4.1", features = ["postgres", "r2d2","chrono","numeric"]}
validator = "0.8.0"
validator_derive = "0.8.0"
rand = "0.6.3"
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.1"
#default-features = false
features = ["json","serve" ,"diesel_postgres_pool"]
